istio/events-service-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: events-service
spec:
  hosts:
  - events-service
  http:
  - route:
    - destination:
        host: events-service
        port:
          number: 8082
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 3s
      retryOn: 5xx,reset,connect-failure,refused-stream
